kustomize/base/recommendationservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: core
  labels:
    app: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
